fix message box display error on mobile phone.

--- a/client/assets/css/styles.css
+++ b/client/assets/css/styles.css
@@ -64,7 +64,7 @@ section {
   border-radius: 4px;
   width: 74%;
   position: relative;
-  left: -2px;
+  left: -3px;
   top: 0;
   padding: 10px;
   background-color: #FFFFFF;
